--- a/dat/reservation.yaml
+++ b/dat/reservation.yaml
@@ -1,9 +1,15 @@
-- date: 2023-6-19
-  facility_id: 12107
-  timeslot: [1]
+- date: 2023-8-8
+  facility_id: 12216
+  timeslot: [1,2]
   event: OB講演会
   
-- date: 2023-8-7
+- date: 2023-8-17
   facility_id: 12216
   timeslot: [2,3,4]
   event: 合同中間発表会
+
+- date: 2023-9-12
+  facility_id: 12311
+  timespan: [10:40,12:30]
+  event: 運用室会議
+ 
